
  # Examples

  * Added srm-direct-scanout example.

  # Internal Changes

  * Integrated legacy plane supported formats into SRMPlane with DRM_FORMAT_MOD_INVALID.
  * Implemented internal EGL Image creation for CPU buffers allocated through OpenGL.
  * Incorporated an internal reference counter to SRMBuffer.

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Thu, 18 Jul 2024 08:56:15 -0400


SRM (0.6.3-1)

  # Bug Fixes

  * Fallback to using implicit framebuffer modifiers in all rendering modes if drmModeAddFB2WithModifiers() fails. Thanks to @RogerDavenport for reporting the issue.

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Wed, 10 Jul 2024 12:44:04 -0400


SRM (0.6.2-1)

  # Bug Fixes

  * Fixed incorrect default linear gamma table calculation in atomic API.
  * Added mutex to prevent racing conditions with external threads when updating the atomic changes flags.

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Mon, 08 Jul 2024 00:13:05 -0400


SRM (0.6.1-1)

  # Performance

  * Added new PRIME rendering mode to enhance performance in multi-GPU setups with few common DMA formats/modifiers.
  * Integrated GPUs are now set as the default allocator device (primary device), promoting lower power consumption and improved performance.

  # Bug Fixes

  * Added small validation tests to ensure proper selection of main-memory buffer allocation APIs, preventing texture glitches on drivers that do not fully support GBM APIs.

  # Environment

  * All rendering modes now default to double buffering, with optional support for triple buffering, while the single buffering option has been deprecated.

  # Examples

  * Added link to example that uses Skia as renderer.

-- Eduardo Hopperdietzel <ehopperdietzel@gmail.com>  Sat, 06 Jul 2024 23:28:04 -0400


SRM (0.6.0-1)

  # New APIs

  * Introduced srmConnectorSetContentType() and srmConnectorGetContentType() functions to optimize display hardware for the type of content being displayed.

  # Bug Fixes
